# unifi-protect-timelapse

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CODE_REVIEW_FINDINGS.md  Dockerfile  README.md  build-linux.sh  build-macos.sh  build-windows.ps1  docker-compose.yaml  pyproject.toml  start-web.sh  timelapse.py
.github/workflows/: ci.yml  release.yml
assets/icons/: README.md  timelapse.icns
assets/linux/: AppRun  timelapse.desktop
docs/screenshots/: README.md
native-macos/: Backend.spec  Info.plist  Package.swift
native-macos/Sources/TimeLapseNative/: AppModel.swift  BackendProcess.swift  CameraSelectionView.swift  ConnectionSettingsView.swift  CredentialStore.swift  DailyScheduleView.swift  LogsDrawer.swift  MainView.swift  Models.swift  TimeLapseApp.swift
native-macos/Tests/TimeLapseNativeTests/: BackendProtocolTests.swift  ConnectionSettingsViewTests.swift  CredentialStoreTests.swift
native-windows/: App.xaml  App.xaml.cs  BackendProcess.cs  CameraSelectionDialog.xaml  CameraSelectionDialog.xaml.cs  ConnectionDialog.xaml  ConnectionDialog.xaml.cs  CredentialStore.cs  DailyScheduleDialog.xaml  DailyScheduleDialog.xaml.cs  LogsWindow.xaml  LogsWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Models.cs  TimeLapseNative.csproj
tests/: __init__.py  test_cli.py  test_config.py  test_download.py  test_gui.py  test_icon_assets.py  test_native_backend.py  test_native_windows_project.py  test_profiles.py  test_protect.py  test_schedule.py  test_service.py  test_web.py
timelapse/: __init__.py  __main__.py  cli.py  config.py  download.py  gui.py  native_backend.py  profiles.py  protect.py  schedule.py  service.py  web.py  web_state.py
timelapse/static/: app.css  app.js
timelapse/templates/: index.html  login.html
timelapse/templates/partials/: cameras.html  jobs.html  message.html  schedules.html  status.html
