[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "timelapse"
version = "1.1.1"
description = "CLI and desktop UniFi Protect timelapse exporter"
requires-python = ">=3.11"
dependencies = [
    "PySide6-Essentials>=6.10.1",
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "keyring>=25.6.0",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "secretstorage>=3.3.3; sys_platform == 'linux'",
    "uiprotect>=15.4.3",
    "uvicorn>=0.35.0",
]

[project.scripts]
timelapse = "timelapse.cli:main"
timelapse-gui = "timelapse.gui:main"
timelapse-web = "timelapse.web:main"

[tool.setuptools.packages.find]
include = ["timelapse*"]

[tool.setuptools.package-data]
timelapse = ["static/*", "templates/**/*.html"]

[dependency-groups]
dev = [
    "httpx2",
    "pyinstaller>=6.21.0",
    "pyright>=1.1.410",
    "pytest>=9.0.3",
    "pytest-qt>=4.5.0",
    "ruff",
]

[tool.ruff]
exclude = [
    ".git",
    ".git-rewrite",
    ".venv",
    ".vscode",
    ".idea"
]

line-length = 120
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "BLE001",
    "COM812",
    "D203",
    "D213",
    "D413",
    "EXE002",
    "FIX002",
    "PLR0913",
    "TD002",
    "TD003"
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.mccabe]
max-complexity = 25

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.pyright]
include = ["timelapse", "tests"]
typeCheckingMode = "standard"
pythonVersion = "3.11"
venv = ".venv"
venvPath = "."

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
qt_api = "pyside6"
qt_log_level_fail = "CRITICAL"
filterwarnings = ["error::starlette.exceptions.StarletteDeprecationWarning"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "D", "PLR2004", "S101", "SLF001"]
